Remove more "this String is a file path" issues